--- a/styles.css
+++ b/styles.css
@@ -13,15 +13,14 @@ body {
   width: 100vw;
   background: black;
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .move {
   position: absolute;
   z-index: 2;
-  height: 5px;
-  width: 5px;
   border-radius: 50%;
-  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .btn {
